--- a/src/main/resources/static/view/index.html
+++ b/src/main/resources/static/view/index.html
@@ -2,10 +2,20 @@
 <head>
 
     <title></title>
+    <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
     123123123123123
     <img src="/image/test1.jpg">
+    <input type="file" id="fileInput">
+    <button id="button1">123123</button>
+    <script>
+        $("#button1").click(function(){
+            alert("123123");
+        })
+
+
+    </script>
 
 </body>
 
